--- a/lab-dw-data-cleaning-and-formatting.ipynb
+++ b/lab-dw-data-cleaning-and-formatting.ipynb
@@ -47,12 +47,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5810735c-8056-4442-bbf2-dda38d3e284a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['custateomer', 'state', 'gender', 'education',\n",
+       "       'custateomer_lifetime_value', 'income', 'monthly_premium_auto',\n",
+       "       'number_of_open_complaints', 'policy_type', 'vehicle_class',\n",
+       "       'total_claim_amount'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here"
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/data-bootcamp-v4/data/main/file1.csv')\n",
+    "df\n",
+    "\n",
+    "#Changing column names in lower case\n",
+    "df.columns= df.columns.str.lower()\n",
+    "df.columns\n",
+    "\n",
+    "#Replacing white spaces by _\n",
+    "df.columns = df.columns.str.replace(' ', '_')\n",
+    "df.columns\n",
+    "\n",
+    "#Replacing st by state\n",
+    "df.columns = df.columns.str.replace('st', 'state')\n",
+    "df.columns"
    ]
   },
   {
@@ -87,7 +117,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "#Gender column contains various inconsistent values such as \"F\", \"M\", \"Femal\"...\n",
+    "df['gender'] = df['gender'].fillna('F', 'M')\n",
+    "len(df[df['gender'].isna()==True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a68128c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#State abbreviations can replaced with its full name\n",
+    "\n",
+    "#firts, I would like to access or display the \"state\"column :\n",
+    "df.loc[:,\"state\"]\n",
+    "\n",
+    "#Then I would replace abbreviations with the full name\n",
+    "State_abbrev = State_abbrev['state'].str.replace(('AZ', 'Arizona'), ('Cali', 'California'),('WA', 'Washington'))\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d483e151",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#In education, \"Bachelors\" could be replaced by \"Bachelor\"\n",
+    "df_education = df.columns['education'].str.replace('Bachelors', 'Bachelor')\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a6495dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#In Customer Lifetime Value, delete the % character\n",
+    "# I would use .dropna() function with a for loop\n",
+    "# But unfortunately I can't manage to do that (the for loop in not a problem, but I don't see how to put .dropna()into it)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1343cdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#In vehicle class, \"Sports Car\", \"Luxury SUV\" and \"Luxury Car\" could be replaced by \"Luxury\"\n",
+    "Luxury = luxury['vehicle class'].str.replace(('''Luxury SUV', 'Luxury Car','Sports Car''', 'Luxury')\n",
+    "df.columns"
    ]
   },
   {
@@ -307,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
